src/test/ui/issues/issue-XXXX/issue-3154.stderr
error[E0621]: explicit lifetime required in the type of `x`
  --> $DIR/issue-3154.rs:6:5
   |
LL | fn thing<'a,Q>(x: &Q) -> Thing<'a,Q> {
   |                   -- help: add explicit lifetime `'a` to the type of `x`: `&'a Q`
LL |     Thing { x: x }
   |     ^^^^^^^^^^^^^^ lifetime `'a` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
